feat: switch from ses to resend, and rebrand to hyperbulletin

--- a/app/views/invitation_mailer/team_invitation.html.erb
+++ b/app/views/invitation_mailer/team_invitation.html.erb
@@ -7,7 +7,7 @@
   as
   <%= @invitation.role == 'administrator' ? 'an' : 'a' %>
   <strong><%= @invitation.role %></strong>
-  on Picoletter.
+  on Hyperbulletin.
   <a href="<%= @accept_url %>" target="_blank">Click here to accept.</a>
 </p>
 
