--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -240,7 +240,7 @@
 
                 <div class="text-stone-600"><%= @invitation.email %></div>
 
-                <div class="text-stone-600"><%= @newsletter.title %> Team Member, Picoletter</div>
+                <div class="text-stone-600"><%= @newsletter.title %> Team Member, Hyperbulletin</div>
               </div>
 
               <div class="mt-6 space-y-4">
