--- a/app/views/newsletters/settings/billing/show.html.erb
+++ b/app/views/newsletters/settings/billing/show.html.erb
@@ -101,6 +101,6 @@
     <% end %>
   <% end %>
 
-  <%= render "newsletters/settings/partials/settings_section", title: "Need help?", subtitle: "Contact support at [billing@picoletter.com](mailto:billing@picoletter.com) to update your plan or billing information." do %>
+  <%= render "newsletters/settings/partials/settings_section", title: "Need help?", subtitle: "Contact support at [billing@hyperbulletin.com](mailto:billing@hyperbulletin.com) to update your plan or billing information." do %>
   <% end %>
 </div>
