--- a/app/views/newsletters/settings/partials/_signup_form.html.erb
+++ b/app/views/newsletters/settings/partials/_signup_form.html.erb
@@ -1,13 +1,13 @@
 <form
-  action="https://picoletter.com/subscribe/tinyjs/embed"
+  action="https://hyperbulletin.com/subscribe/tinyjs/embed"
   method="post"
   target="popupwindow"
-  onsubmit="window.open('https://picoletter.com/tinyjs', 'popupwindow')"
+  onsubmit="window.open('https://hyperbulletin.com/tinyjs', 'popupwindow')"
   class="embeddable-buttondown-form"
 >
   <label for="bd-email">Enter your email</label>
   <input type="email" name="email" autocomplete="email" id="bd-email">
 
   <input type="submit" value="Subscribe">
-  <p><a href="https://picoletter.com?from=tinyjs" target="_blank">Managed by Picoletter.</a></p>
+  <p><a href="https://hyperbulletin.com?from=tinyjs" target="_blank">Managed by Hyperbulletin.</a></p>
 </form>
