--- a/app/views/newsletters/settings/show.html.erb
+++ b/app/views/newsletters/settings/show.html.erb
@@ -6,7 +6,7 @@
       <%= form.text_field :title,
                       required: true,
                       autofocus: true,
-                      hint: "picoletter.com/#{@newsletter.slug}" %>
+                      hint: "hyperbulletin.com/#{@newsletter.slug}" %>
 
       <%= form.text_area :description,
                      required: true,
