--- a/app/views/playground/show.html.erb
+++ b/app/views/playground/show.html.erb
@@ -25,7 +25,7 @@
 
           <p>
             This is how a body will look like in an email,
-            <a href="https://picoletter.app" class="underline" style="color: <%= theme.primary %>">
+            <a href="https://hyperbulletin.app" class="underline" style="color: <%= theme.primary %>">
               This is how a link will show up.
             </a>
           </p>
@@ -38,7 +38,7 @@
 
           <p>
             This is how a body will look like in an email,
-            <a href="https://picoletter.app" class="underline" style="color: <%= theme.primary %>">
+            <a href="https://hyperbulletin.app" class="underline" style="color: <%= theme.primary %>">
               This is how a link will show up.
             </a>
           </p>
@@ -51,7 +51,7 @@
 
           <p>
             This is how a body will look like in an email,
-            <a href="https://picoletter.app" class="underline" style="color: <%= theme.primary %>">
+            <a href="https://hyperbulletin.app" class="underline" style="color: <%= theme.primary %>">
               This is how a link will show up.
             </a>
           </p>
