--- a/app/views/public/newsletters/templates/editorial/_show_post.html.erb
+++ b/app/views/public/newsletters/templates/editorial/_show_post.html.erb
@@ -44,7 +44,7 @@
 
     <p class="text-sm text-stone-500 text-center">
       This newsletter is managed by
-      <%= link_to "Picoletter", "/", class: "text-zinc-500 hover:underline" %>.
+      <%= link_to "Hyperbulletin", "/", class: "text-zinc-500 hover:underline" %>.
     </p>
   </footer>
 </main>
