--- a/app/views/public/subscribers/almost_there.html.erb
+++ b/app/views/public/subscribers/almost_there.html.erb
@@ -386,6 +386,6 @@
   <hr class="my-5">
 
   <p class="text-xl text-stone-700">
-    This newsletter is managed by <%= link_to "Picoletter", "/", class: "text-zinc-500 hover:underline" %>.
+    This newsletter is managed by <%= link_to "Hyperbulletin", "/", class: "text-zinc-500 hover:underline" %>.
   </p>
 </div>
