--- a/app/views/subscription_mailer/confirmation.html.erb
+++ b/app/views/subscription_mailer/confirmation.html.erb
@@ -38,6 +38,6 @@
 
 <% content_for :footer do %>
   <tr>
-    <td class="content-block powered-by">Powered by <a href="http://picoletter.com">Picoletter</a></td>
+    <td class="content-block powered-by">Powered by <a href="http://hyperbulletin.com">Hyperbulletin</a></td>
   </tr>
 <% end %>
