--- a/app/views/user_mailer/verify_email.text.erb
+++ b/app/views/user_mailer/verify_email.text.erb
@@ -1,4 +1,4 @@
-Welcome to Picoletter!
+Welcome to Hyperbulletin!
 
 To get started, we need to confirm your email address, so please click this link to finish creating your account:
 
