--- a/app/views/layouts/newsletters.html.erb
+++ b/app/views/layouts/newsletters.html.erb
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Picoletter</title>
+    <title>Hyperbulletin</title>
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
