--- a/app/views/newsletters/settings/partials/_dns_records.html.erb
+++ b/app/views/newsletters/settings/partials/_dns_records.html.erb
@@ -27,33 +27,9 @@
     <div class="col-span-1 text-right">Status</div>
   </div>
   <% if newsletter.sending_domain %>
-    <%= render "newsletters/settings/partials/dns_record_row",
-    record: {
-      "type" => "MX",
-      "name" => "mail.#{newsletter.sending_domain.name}",
-      "value" => "feedback-smtp.#{newsletter.sending_domain.region}.amazonses.com",
-      "ttl" => "Auto",
-      "priority" => 10,
-      "status" => newsletter.sending_domain.spf_status,
-    } %>
-    <%= render "newsletters/settings/partials/dns_record_row",
-    record: {
-      "type" => "TXT",
-      "name" => "picoletter._domainkey.#{newsletter.sending_domain.name}",
-      "value" => "p=#{newsletter.sending_domain.public_key}",
-      "ttl" => "Auto",
-      "priority" => "",
-      "status" => newsletter.sending_domain.dkim_status,
-    } %>
-    <%= render "newsletters/settings/partials/dns_record_row",
-    record: {
-      "type" => "TXT",
-      "name" => "mail.#{newsletter.sending_domain.name}",
-      "value" => "v=spf1 include:amazonses.com ~all",
-      "ttl" => "Auto",
-      "priority" => "",
-      "status" => newsletter.sending_domain.spf_status,
-    } %>
+    <% newsletter.sending_domain.resend_records&.each do |record| %>
+      <%= render "newsletters/settings/partials/dns_record_row", record: record %>
+    <% end %>
   <% else %>
     <% newsletter.dns_records&.each do |record| %>
       <%= render "newsletters/settings/partials/dns_record_row", record: record %>
