--- a/app/views/public/newsletters/templates/slate/_all_posts.html.erb
+++ b/app/views/public/newsletters/templates/slate/_all_posts.html.erb
@@ -36,7 +36,7 @@
   <footer class="max-w-3xl mx-auto mt-10">
     <p class="text-sm text-stone-500 text-center">
       This newsletter is managed by
-      <%= link_to "Picoletter", "/", class: "text-zinc-500 hover:underline" %>.
+      <%= link_to "Hyperbulletin", "/", class: "text-zinc-500 hover:underline" %>.
     </p>
   </footer>
 </main>
